<resources>
    <string name="app_name">InClass09</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="cpass">Confirm Password</string>
    <string name="sendto">Send To :</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="cancle">Cancle</string>
    <string name="subject">Subject</string>
    <string name="from">From :</string>
    <string name="to">To</string>
    <string name="back">Back</string>
    <string name="createdat">Created :</string>
</resources>
