<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="147dp"
            android:layout_height="57dp"
            android:layout_marginStart="151dp"
            android:layout_marginEnd="172dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cpass"
            app:layout_constraintVertical_bias="0.104" />

        <Button
            android:id="@+id/bt_cancle"
            android:layout_width="147dp"
            android:layout_height="57dp"
            android:layout_marginStart="151dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="88dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_signup"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lname"
            app:layout_constraintVertical_bias="0.053" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_cpass"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/cpass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pass"
            app:layout_constraintVertical_bias="0.109" />

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="107dp"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_fname"
            app:layout_constraintVertical_bias="0.051" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>