<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="163dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="56dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/bt_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="147dp"
            android:layout_height="57dp"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="50dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/bt_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="147dp"
            android:layout_height="57dp"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="211dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>